syntax = "proto3";
package profile;

option go_package = "proto/profile;profile";

message CreateRequest {
    string name = 1;
    bool is_valid = 2;
    int32 id = 3;
}

message CreateResponse {
    string message = 1;
}

service ProfileService {
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc CreateProfileStream (CreateRequest) returns (stream CreateResponse);
}